[CQF] RIDIntersect implementer accesses RepititionEstimation physical property when it might be missing

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • QO 2023-10-16
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      jstests/sharding/update_compound_shard_key.js (run here) shows a query failure due to a uassert failing when referencing the value of RepetitionEstimate from a set of physical properties which is missing this property. This occurs in the implementer for RIDIntersectNode when optimized with an index target requirement.

      This ticket tracks work to check if this property exists before referencing it and provide a fallback value.

            Assignee:
            Ben Shteinfeld
            Reporter:
            Ben Shteinfeld
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: