SERVER-81861 [CQF] Avoid unconditionally accessing RepetitionEstimate

In the implementer for RIDIntersectNode, check if the set of physical
properies contains RepetitionEstimate because accessing it. This fixes
an assertion failure that was revealed by turning on a CQF-M4 sharding
passthrough suite.